--- a/app/src/main/res/layout/activity_editar_clientes.xml
+++ b/app/src/main/res/layout/activity_editar_clientes.xml
@@ -35,36 +35,62 @@
             android:orientation="vertical">
 
 
-
-            <TextView
-
-                android:id="@+id/tv_editar_cliente_titulo"
+            <LinearLayout
+                android:id="@+id/llh_contenedor_tv_img"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:text="EDITAR CLIENTE"
-                android:textColor="#FFFF"
-                android:textSize="25sp"/>
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+
+                <TextView
+
+                    android:id="@+id/tv_editar_cliente_titulo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="@dimen/mapbox_internalMinSpan23"
+                    android:layout_weight="1"
+                    android:text="EDITAR CLIENTE"
+                    android:textColor="#FFFF"
+                    android:textSize="25sp" />
+
+
+                <ImageView
+
+                    android:id="@+id/img_boton_editar"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/editar_cliente_boton_ec_64px" />
+
+
+            </LinearLayout>
+
 
 
             <LinearLayout
 
-                android:id="@+id/llh_img_cliente_editar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:orientation="horizontal">
-
-
-                <ImageView
-                    android:id="@+id/img_cliente_editar"
+                    android:id="@+id/llh_img_cliente_editar"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:layout_marginRight="150dp"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:orientation="horizontal">
 
 
-            </LinearLayout>
+                    <ImageView
+
+                        android:id="@+id/img_cliente_editar"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:layout_marginRight="150dp"
+                        android:layout_marginBottom="10dp"/>
+
+
+                </LinearLayout>
+
 
 
             <LinearLayout
@@ -161,7 +187,8 @@
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:hint="OBLIGATORIO"
-                        android:inputType="textMultiLine"
+                        android:inputType="textAutoCorrect|textCapWords"
+                        android:maxLength="45"
                         android:textColor="#03a9f4"
                         android:textSize="24sp"
                         android:textStyle="bold" />
@@ -204,7 +231,8 @@
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:hint="OBLIGATORIO"
-                        android:inputType="textMultiLine"
+                        android:inputType="textAutoCorrect|textCapWords"
+                        android:maxLength="45"
                         android:textColor="#03a9f4"
                         android:textSize="24sp"
                         android:textStyle="bold" />
@@ -248,7 +276,8 @@
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:hint="OBLIGATORIO"
-                        android:inputType="textMultiLine|number"
+                        android:maxLength="4"
+                        android:inputType="number"
                         android:textColor="#03a9f4"
                         android:textSize="24sp"
                         android:textStyle="bold" />
@@ -296,7 +325,8 @@
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:hint="OBLIGATORIO"
-                        android:inputType="textMultiLine|number"
+                        android:inputType="number"
+                        android:maxLength="8"
                         android:textColor="#03a9f4"
                         android:textSize="24sp"
                         android:textStyle="bold" />
@@ -342,7 +372,7 @@
                         android:layout_gravity="left"
                         android:gravity="center|left"
                         android:hint="OBLIGATORIO"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:textColor="#03a9f4"
                         android:textSize="24sp"
                         android:textStyle="bold" />
@@ -386,7 +416,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:hint="OBLIGATORIO"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:textColor="#03a9f4"
                         android:textSize="24sp"
                         android:textStyle="bold" />
@@ -479,7 +509,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center|left"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:textColor="#03a9f4"
                         android:textSize="24sp"
                         android:textStyle="bold" />
