--- a/app/src/main/res/layout/content_datos_personales_responsable.xml
+++ b/app/src/main/res/layout/content_datos_personales_responsable.xml
@@ -304,6 +304,7 @@
                             android:gravity="center"
                             android:imeOptions="actionNext"
                             android:inputType="number"
+                            android:maxLength="8"
                             android:textCursorDrawable="@color/colorCursorSupervisores"
                             android:textSize="25sp"
                             android:textStyle="bold" />
