--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -78,7 +78,6 @@
                     android:cursorVisible="false"
                     android:focusable="false"
                     android:gravity="center"
-                    android:text="TORNEO DE VOLEY - MORAVA"
                     android:textColor="#000"
                     android:textCursorDrawable="@color/colorCursorSupervisores"
                     android:textSize="30sp"
@@ -93,15 +92,14 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="0dp"
+                    android:background="#eeeeee"
+                    android:cursorVisible="false"
+                    android:focusable="false"
                     android:gravity="center"
-                    android:text="FRANCO"
                     android:textColor="#000"
                     android:textCursorDrawable="@color/colorCursorSupervisores"
                     android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:focusable="false"
-                    android:cursorVisible="false"
-                    android:background="#eeeeee"/>
+                    android:textStyle="bold" />
 
                 <EditText
 
@@ -111,15 +109,14 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="0dp"
+                    android:background="#eeeeee"
+                    android:cursorVisible="false"
+                    android:focusable="false"
                     android:gravity="center"
-                    android:text="PINTOS"
                     android:textColor="#000"
                     android:textCursorDrawable="@color/colorCursorSupervisores"
                     android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:focusable="false"
-                    android:cursorVisible="false"
-                    android:background="#eeeeee"/>
+                    android:textStyle="bold" />
 
                 <View
 
@@ -166,15 +163,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Fecha"
-                        android:textColor="#000"
-                        android:textSize="25sp"
-                        android:textStyle="bold"
-                        android:focusable="false"
-                        android:cursorVisible="false"
                         android:background="#eeeeee"
-                        android:textCursorDrawable="@color/colorCursorSupervisores"/>
+                        android:cursorVisible="false"
+                        android:focusable="false"
+                        android:gravity="center"
+                        android:textColor="#000"
+                        android:textCursorDrawable="@color/colorCursorSupervisores"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -214,15 +210,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Fecha"
-                        android:textColor="#000"
-                        android:textSize="25sp"
-                        android:textStyle="bold"
-                        android:focusable="false"
-                        android:cursorVisible="false"
                         android:background="#eeeeee"
-                        android:textCursorDrawable="@color/colorCursorSupervisores"/>
+                        android:cursorVisible="false"
+                        android:focusable="false"
+                        android:gravity="center"
+                        android:textColor="#000"
+                        android:textCursorDrawable="@color/colorCursorSupervisores"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
