Carga_descarga_cambios_importantes
Se agrego el cambio de colores cuando se cierran las tandas (colores grises) y también se añadió un botón de "Habilitar tandas". Faltan arreglar boludeces, pero lo más importante está hecho

--- a/app/src/main/res/menu/menu_cargas_descargas.xml
+++ b/app/src/main/res/menu/menu_cargas_descargas.xml
@@ -31,7 +31,11 @@
 
 
 
-
+            <item
+               android:id="@+id/action_avaible_tanda"
+               android:orderInCategory="100"
+               android:title="@string/action_avaible_tanda"
+               app:showAsAction="never" />
 
 
 
