--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,19 +9,14 @@
     </style>
 
 
-
-
-
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-
-
 
 
     <!--Color del cursor del EditText si el usuario se loguea como SUPERVISOR -->
@@ -40,7 +35,6 @@
     </style>
 
 
-
     <!-- Cambio de colores del Calendario (DatePicker) -->
 
     <style name="MyDatePickerStyleSupervisoresNuevoEvento" parent="Theme.AppCompat.Light.Dialog">
@@ -53,10 +47,8 @@
     </style>
 
     <style name="MyDatePickerStyleRepartidoresNuevoResponsable" parent="Theme.AppCompat.Light.Dialog">
-        <item name="colorAccent"> #311b92</item>
+        <item name="colorAccent">#311b92</item>
     </style>
-
-
 
 
     <!-- ********* Cambio de colores AlertDialog Message SUPERVISORES ********** -->
@@ -82,7 +74,6 @@
         <item name="android:textColor">#ff9100</item>
         <item name="android:textSize">20dip</item>
     </style>
-
 
 
     <!-- ********* Cambio de colores AlertDialog Message REPARTIDORES ********** -->
@@ -111,10 +102,57 @@
     </style>
 
 
+    <style name="CustomNavigationMapRoute" parent="@style/NavigationMapRoute">
+        <!-- Main color for the route line -->
+        <item name="routeColor">#4882C6</item>
+        <!-- Outline color for the route line -->
+        <item name="routeShieldColor">#2C5F99</item>
+        <!-- Color for moderate traffic along the route line -->
+        <item name="routeModerateCongestionColor">#FFAB65</item>
+        <!-- Color for severe traffic along the route line -->
+        <item name="routeSevereCongestionColor">#E85552</item>
+        <!-- Scales -->
+        <item name="routeScale">1.0</item>
+
+        <!-- Background color of the banner -->
+        <item name="navigationViewBannerBackground">#FFFFFF</item>
+        <!-- Color for the primary label that displays the turn name -->
+        <item name="navigationViewBannerPrimaryText">#37516F</item>
+        <!-- Color for the secondary label that occasionally appears underneath the primary label -->
+        <item name="navigationViewBannerSecondaryText">#E637516F</item>
+        <!-- Primary color for the turn arrow icons-->
+        <item name="navigationViewBannerManeuverPrimary">#37516F</item>
+        <!-- Secondary color for the turn arrow icons (e.g. the line segment that forks off) -->
+        <item name="navigationViewBannerManeuverSecondary">#4D37516F</item>
+        <!-- Alternate background color for the dropdown list of upcoming steps -->
+        <item name="navigationViewListBackground">#FAFAFA</item>
+
+        <!-- The summary view along the bottom of the screen -->
+        <!-- Background color of the summary view -->
+        <item name="navigationViewPrimary">#FFFFFF</item>
+        <!-- Tint color for icons in the summary view -->
+        <item name="navigationViewSecondary">#28353D</item>
+        <!-- Accent color for elements such as the recenter button -->
+        <item name="navigationViewAccent">#4882C6</item>
+        <!-- Color for the main duration label in the summary view -->
+        <item name="navigationViewPrimaryText">#424242</item>
+        <!-- Color for the secondary distance and ETA label in the summary view -->
+        <item name="navigationViewSecondaryText">#424242</item>
+
+        <!-- Custom colors for progress bars displayed during navigation -->
+        <item name="navigationViewProgress">#4B75A4</item>
+        <item name="navigationViewProgressBackground">#39587B</item>
+
+        <!-- Custom colors for the route line and traffic -->
+        <item name="navigationViewRouteStyle">@style/CustomNavigationMapRoute</item>
+
+        <!-- Map style -->
+        <item name="navigationViewMapStyle">mapbox://styles/mapbox/navigation-guidance-night-v2
+        </item>
+    </style>
 
 
-
-
+    <!--######################################## -->
 
 
     <style name="NavigationMapRoute">
@@ -129,7 +167,11 @@
         <item name="routeShieldColor">@color/mapbox_navigation_route_shield_layer_color</item>
         <!-- Scales -->
         <item name="routeScale">1.0</item>
+        <!-- Map style -->
+        <item name="navigationViewMapStyle">mapbox://styles/mapbox/navigation-guidance-night-v2
+        </item>
     </style>
+
 
     <style name="NavigationView" parent="Theme.AppCompat.NoActionBar">
         <item name="navigationViewPrimary">@color/mapboxWhite</item>
