--- a/app/src/main/res/layout/activity_mapa_repartidores.xml
+++ b/app/src/main/res/layout/activity_mapa_repartidores.xml
@@ -27,16 +27,64 @@
     <include layout="@layout/content_mapa_repartidores" />
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/back_to_camera_tracking_mode"
-        android:layout_width="wrap_content"
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        app:backgroundTint="#FFFF"
-        app:srcCompat="@drawable/ic_fab_ubicacion_actual" />
+        android:layout_gravity="bottom"
+        android:gravity="end"
+        android:orientation="vertical">
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/back_to_camera_tracking_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            app:backgroundTint="#FFFF"
+            app:srcCompat="@drawable/ic_fab_ubicacion_actual" />
+
+
+<!--
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_comenzar_reparto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            app:backgroundTint="#2962FF"
+            app:srcCompat="@drawable/mapa_repartidores_ic_comenzar_reparto" /> -->
+
+        <Button
+
+            android:id="@+id/fab_comenzar_reparto"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/mapa_repartidores_boton_circulo"
+            android:drawableTop="@drawable/mapa_repartidores_ic_comenzar_reparto"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:text="IR"
+            android:textAlignment="center"
+            android:textColor="#fff" />
+
+
+
+    </LinearLayout>
+
+
+
+
+
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
