--- a/app/src/main/res/layout/activity_mapa_repartidores.xml
+++ b/app/src/main/res/layout/activity_mapa_repartidores.xml
@@ -8,6 +8,8 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+
     tools:context=".Mapa_Repartidores">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -23,6 +25,10 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
+
+
+
+
 
     <include layout="@layout/content_mapa_repartidores" />
 
@@ -45,30 +51,18 @@
             android:layout_gravity="end|bottom"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="5dp"
             app:backgroundTint="#FFFF"
             app:srcCompat="@drawable/ic_fab_ubicacion_actual" />
 
 
-<!--
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_comenzar_reparto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            app:backgroundTint="#2962FF"
-            app:srcCompat="@drawable/mapa_repartidores_ic_comenzar_reparto" /> -->
-
         <Button
 
-            android:id="@+id/fab_comenzar_reparto"
+            android:id="@+id/btn_comenzar_reparto"
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="100dp"
             android:background="@drawable/mapa_repartidores_boton_circulo"
             android:drawableTop="@drawable/mapa_repartidores_ic_comenzar_reparto"
             android:paddingTop="5dp"
@@ -80,10 +74,6 @@
 
 
     </LinearLayout>
-
-
-
-
 
 
 
