--- a/app/src/main/res/menu/menu_buscar_cliente_para_realizar_venta.xml
+++ b/app/src/main/res/menu/menu_buscar_cliente_para_realizar_venta.xml
@@ -16,11 +16,11 @@
 
 
     <item
-        android:id="@+id/action_ac"
+        android:id="@+id/action_add_cliente_buscar_cliente_para_venta"
+        android:icon="@drawable/mapa_repartidores_ic_add_cliente"
         android:orderInCategory="100"
         android:title="@string/action_agregar_cliente"
-        app:showAsAction="never" />
-
+        app:showAsAction="always|withText" />
 
 
 
