--- a/app/src/main/res/drawable-anydpi/ic_password.xml
+++ b/app/src/main/res/drawable-anydpi/ic_password.xml
@@ -3,7 +3,7 @@
     android:height="50dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#0D47A1"
+    android:tint="#0091ea"
     android:alpha="0.8">
     <path
         android:fillColor="#FF000000"
