--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,11 +34,18 @@
             android:orientation="vertical">
 
 
+            <ImageView
+
+                android:id="@+id/img_logo_av"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@mipmap/logo_av" />
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:background="#bbdefb"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
@@ -69,6 +76,7 @@
                         android:singleLine="true"
                         android:textColor="#1a237e"
                         android:textColorHint="#263238"
+                        android:textColorLink="#0091ea"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -84,7 +92,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="20dp"
-                android:background="#bbdefb"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
@@ -122,6 +129,7 @@
                         android:singleLine="true"
                         android:textColor="#1a237e"
                         android:textColorHint="#263238"
+                        android:textColorLink="#0091ea"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -136,7 +144,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="#880e4f"
+                android:background="#1a237e"
                 android:text="@string/action_sign_in"
                 android:textColor="#FFFF"
                 android:textSize="24sp"
